# Kadam-Tauri

./: .gitignore  BUILD.md  CLAUDE.md  README.md  cow.html  flashlight.html  hints.html  index.html  joe.html  little_red_hen.html  mcq.js  onboarding-interactive.js  onboarding.css  package-lock.json  package.json  passage.js  progress.html  question.html  sentence-practice.html  stories.js  story.html  tauri-api.js  testquiz.html  wordVault.html
.github/workflows/: build-windows.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/css/: onboarding.css
src/js/: free.js  onboarding-interactive.js  onboarding.js  passage.js  reorder.js  stories.js  tauri-api.js
src/pages/: chat.html  flashlight.html  hints.html  question.html  story.html  testquiz.html  wordVault.html
src/stories/: cow.html  joe.html  little_red_hen.html
