[package]
name = "kadam"
version = "1.0.0"
description = "Kadam - Learn languages with local AI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
dirs = "5.0"
llama-cpp-2 = "0.1.80"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
